# workforce_manager

./: .gitignore  pyproject.toml
workforce_manager/: hooks.py  install.py  modules.txt
workforce_manager/contract_labour_management/: api.py  challan_utils.py  face_utils.py  notifications.py  payslip_utils.py  registers.py  utils.py  worker_portal.py
workforce_manager/contract_labour_management/dashboard_chart/attendance_trend/: attendance_trend.json
workforce_manager/contract_labour_management/dashboard_chart/compliance_status/: compliance_status.json
workforce_manager/contract_labour_management/dashboard_chart/labour_cost_trend/: labour_cost_trend.json
workforce_manager/contract_labour_management/dashboard_chart/monthly_overtime/: monthly_overtime.json
workforce_manager/fixtures/: Active Contractors.json  Active Employees.json  Active Sites.json  Attendance %.json  Attendance Trend.json  Compliance Status.json  Contract Labour Management.json  Monthly Overtime.json  Outside Geofence.json  Today's Attendance.json  active_contractors.json  active_employees.json  active_sites.json  attendance_%.json  attendance_trend.json  compliance_status.json  contract_labour_management.json  contractor_distribution.json  documents_expiring.json  employee_distribution.json  face_verifications_pending.json  labour_cost_trend.json  licenses_expiring_soon.json  monthly_overtime.json  outside_geofence.json  pending_compliance.json  today's_attendance.json
workforce_manager/www/: get_qr_scanner_js.py  qr-scanner.html  qr-scanner.py  qr.html  qr.py  worker-portal.html
(+80 files in other folders)
