[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "workforce_manager"
authors = [{name = "Frappe Developer"}]
version = "0.0.1"
description = "HRMS / Contract Labour Management system"
HEAD
dependencies = ["frappe", "erpnext","pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2" ]

dependencies = []  # Frappe auto-discovers apps; pip deps not needed
228ee91566ab14dcce0e612cdc906d18c6dccb1d
